--- a/tinycards/Gemfile
+++ b/tinycards/Gemfile
@@ -17,6 +17,8 @@ gem "jbuilder", "~> 2.5"
 gem "devise"
 gem "mysql2", ">= 0.3.18", "< 0.5"
 gem "rack-cors"
+gem 'bootstrap', '~> 4.0.0.beta2.1'
+gem 'font-awesome-rails'
 
 group :development, :test do
   gem "byebug", platform: :mri
