--- a/angular2/package.json
+++ b/angular2/package.json
@@ -21,7 +21,9 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "ngx-bootstrap": "^2.0.0-beta.9",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
@@ -32,7 +34,9 @@
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
+    "angular2-fontawesome": "^0.9.3",
     "codelyzer": "~3.2.0",
+    "font-awesome": "^4.7.0",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "~1.7.0",
