--- a/tinycards/Gemfile
+++ b/tinycards/Gemfile
@@ -18,6 +18,8 @@ gem "mysql2", ">= 0.3.18", "< 0.5"
 gem "rack-cors"
 gem "bootstrap", "~> 4.0.0.beta2.1"
 gem "font-awesome-rails"
+gem "toastr-rails"
+gem "kaminari"
 
 group :development, :test do
   gem "byebug", platform: :mri
