--- a/tinycards/Gemfile
+++ b/tinycards/Gemfile
@@ -5,21 +5,22 @@ git_source(:github) do |repo_name|
   "https://github.com/#{repo_name}.git"
 end
 
-
-gem "rails", "~> 5.0.4"
-gem "puma", "~> 3.0"
-gem "sass-rails", "~> 5.0"
-gem "uglifier", ">= 1.3.0"
-gem "coffee-rails", "~> 4.2"
-gem "jquery-rails"
-gem "jbuilder", "~> 2.5"
-gem "devise"
-gem "mysql2", ">= 0.3.18", "< 0.5"
-gem "rack-cors"
 gem "bootstrap", "~> 4.0.0.beta2.1"
+gem "cancancan"
+gem "coffee-rails", "~> 4.2"
+gem "config"
+gem "devise"
 gem "font-awesome-rails"
-gem "toastr-rails"
+gem "jbuilder", "~> 2.5"
+gem "jquery-rails"
 gem "kaminari"
+gem "mysql2", ">= 0.3.18", "< 0.5"
+gem "puma", "~> 3.0"
+gem "rack-cors"
+gem "rails", "~> 5.0.4"
+gem "sass-rails", "~> 5.0"
+gem "toastr-rails"
+gem "uglifier", ">= 1.3.0"
 
 group :development, :test do
   gem "byebug", platform: :mri
