--- a/tinycards/Gemfile
+++ b/tinycards/Gemfile
@@ -21,6 +21,10 @@ gem "rails", "~> 5.0.4"
 gem "sass-rails", "~> 5.0"
 gem "toastr-rails"
 gem "uglifier", ">= 1.3.0"
+gem "kaminari"
+gem "carrierwave", "0.10.0"
+gem "mini_magick", "3.8.0"
+gem "fog", "1.36.0"
 
 group :development, :test do
   gem "byebug", platform: :mri
