--- a/tinycards/Gemfile
+++ b/tinycards/Gemfile
@@ -28,6 +28,7 @@ gem "fog", "1.36.0"
 
 group :development, :test do
   gem "byebug", platform: :mri
+  gem "pry-byebug"
 end
 
 group :development do
