--- a/my-tinycards-api/Gemfile
+++ b/my-tinycards-api/Gemfile
@@ -117,7 +117,9 @@ gem "fog"
 gem "aws-sdk", "~> 1.66.0"
 gem "capistrano-faster-assets"
 gem "rack-cors", :require => "rack/cors"
-gem "grape", "< 1.0.0"
+# gem "grape", "< 1.0.0"
+# gem "grape-active_model_serializers"
+gem "apipie-rails"
+gem "doorkeeper"
 gem "active_model_serializers"
-gem "grape-active_model_serializers"
 gem "mini_magick"
