--- a/angular2/package.json
+++ b/angular2/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^5.0.0",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "ng2-modal": "0.0.25",
     "ngx-bootstrap": "^2.0.0-beta.9",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
