--- a/my-tinycards-api/config/database.yml
+++ b/my-tinycards-api/config/database.yml
@@ -3,7 +3,7 @@ default: &default
   encoding: utf8
   pool: 5
   host: <%= ENV["DATABASE_HOSTNAME"] %>
-  database: tinycard
+  database: <%= ENV["DATABASE_NAME"] %>
   username: <%= ENV["DATABASE_USERNAME"] %>
   password: <%= ENV["DATABASE_PASSWORD"] %>
   redis:
