--- a/angular2/package.json
+++ b/angular2/package.json
@@ -21,8 +21,10 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "angular2-wizard": "^0.4.0",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "jquery": "^3.3.1",
     "ng2-modal": "0.0.25",
     "ngx-bootstrap": "^2.0.0-beta.9",
     "rxjs": "^5.5.2",
@@ -34,6 +36,7 @@
     "@angular/language-service": "^5.0.0",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
+    "@types/jquery": "^3.3.0",
     "@types/node": "~6.0.60",
     "angular2-fontawesome": "^0.9.3",
     "codelyzer": "~3.2.0",
