--- a/my-tinycards-api/Gemfile
+++ b/my-tinycards-api/Gemfile
@@ -28,6 +28,9 @@ gem "jbuilder", "~> 2.0"
 # Use Capistrano for deployment
 # gem "capistrano-rails", group: :development
 gem "nokogiri", "~> 1.8.1"
+gem 'carrierwave'
+gem 'carrierwave-base64'
+gem 'mime-types', require: 'mime/types/full'
 
 group :development, :test do
   # Call "byebug" anywhere in the code to stop execution and get a debugger console
