--- a/angular2/package.json
+++ b/angular2/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "@types/slick-carousel": "^1.6.32",
     "angular2-image-upload": "^1.0.0-rc.0",
     "angular2-wizard": "^0.4.0",
     "bootstrap": "^3.3.7",
@@ -51,6 +52,7 @@
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.2",
+    "slick-carousel": "^1.8.1",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
     "typescript": "~2.4.2"
