--- a/angular2/package.json
+++ b/angular2/package.json
@@ -51,6 +51,7 @@
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "lodash": "^4.17.5",
     "protractor": "~5.1.2",
     "slick-carousel": "^1.8.1",
     "ts-node": "~3.2.0",
