--- a/my-tinycards-api/Gemfile
+++ b/my-tinycards-api/Gemfile
@@ -126,3 +126,6 @@ gem "apipie-rails"
 gem "doorkeeper"
 gem "active_model_serializers"
 gem "mini_magick"
+gem "google_drive"
+gem "spreadsheet"
+gem "rubyXL"
