--- a/my-tinycards-api/Gemfile
+++ b/my-tinycards-api/Gemfile
@@ -39,7 +39,7 @@ group :development, :test do
   gem "rspec-rails"
   gem "rspec-collection_matchers"
   gem "better_errors"
-  gem "factory_girl_rails"
+  gem "factory_bot_rails"
   gem "guard-rspec", require: false
   gem "faker"
   gem "pry"
@@ -90,7 +90,7 @@ group :staging do
   gem "rspec"
   gem "rspec-rails"
   gem "rspec-collection_matchers"
-  gem "factory_girl_rails"
+  gem "factory_bot_rails"
   gem "faker"
 end
 
