--- a/angular2/package.json
+++ b/angular2/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "@tinymce/tinymce-angular": "^1.0.5",
     "@types/slick-carousel": "^1.6.32",
     "angular2-image-upload": "^1.0.0-rc.0",
     "angular2-wizard": "^0.4.0",
@@ -30,6 +31,7 @@
     "ng2-modal": "0.0.25",
     "ngx-bootstrap": "^2.0.0-beta.9",
     "rxjs": "^5.5.2",
+    "tinymce": "^4.5.3",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
