--- a/my-tinycards-api/Gemfile
+++ b/my-tinycards-api/Gemfile
@@ -31,6 +31,8 @@ gem "nokogiri", "~> 1.8.1"
 gem 'carrierwave'
 gem 'carrierwave-base64'
 gem 'mime-types', require: 'mime/types/full'
+gem "font-awesome-rails"
+gem "bootstrap", "~> 4.0.0.beta2.1"
 
 group :development, :test do
   # Call "byebug" anywhere in the code to stop execution and get a debugger console
