fix layout sign-up sign-in

--- a/my-tinycards-api/Gemfile
+++ b/my-tinycards-api/Gemfile
@@ -51,7 +51,7 @@ group :development, :test do
   gem "bundler-audit"
   gem "rubocop", "~> 0.35.0", require: false
   gem "rubocop-checkstyle_formatter", require: false
-  gem "scss_lint"
+  gem "scss-lint"
   gem "scss_lint_reporter_checkstyle", require: false
   gem "eslint-rails"
   gem "rails_best_practices"
