--- a/my-tinycards-api/Gemfile
+++ b/my-tinycards-api/Gemfile
@@ -33,6 +33,7 @@ gem 'carrierwave-base64'
 gem 'mime-types', require: 'mime/types/full'
 gem "font-awesome-rails"
 gem "bootstrap", "~> 4.0.0.beta2.1"
+gem "highcharts-rails"
 
 group :development, :test do
   # Call "byebug" anywhere in the code to stop execution and get a debugger console
