--- a/my-tinycards-api/Gemfile
+++ b/my-tinycards-api/Gemfile
@@ -6,7 +6,7 @@ gem "rails", ">= 5.1.1"
 # Use mysql as the database for Active Record
 gem "mysql2", ">= 0.3.18", "< 0.5"
 # Use Puma as the app server
-# gem "puma", "~> 3.0"
+gem "puma", "~> 3.0"
 # Use SCSS for stylesheets
 gem "sass-rails"
 # Use Uglifier as compressor for JavaScript assets
@@ -21,7 +21,7 @@ gem "jquery-rails"
 # Build JSON APIs with ease. Read more: https://github.com/rails/jbuilder
 gem "jbuilder", "~> 2.0"
 # Use Redis adapter to run Action Cable in production
-# gem "redis", "~> 3.0"
+gem "redis", "~> 3.0"
 # Use ActiveModel has_secure_password
 # gem "bcrypt", "~> 3.1.7"
 
