--- a/my-tinycards-api/config/cable.yml
+++ b/my-tinycards-api/config/cable.yml
@@ -1,10 +1,12 @@
 # Action Cable uses Redis by default to administer connections, channels, and sending/receiving messages over the WebSocket.
 production:
   adapter: redis
-  url: redis://localhost:6379/1
+  url: redis://<%= ENV["REDIS_HOSTNAME"] %>:6379/1
 
 development:
-  adapter: async
+  adapter: redis
+  url: redis://<%= ENV["REDIS_HOSTNAME"] %>:6379/1
 
 test:
-  adapter: async
+  adapter: redis
+  url: redis://<%= ENV["REDIS_HOSTNAME"] %>:6379/1
