--- a/angular2/package.json
+++ b/angular2/package.json
@@ -4,10 +4,11 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "dev": "NODE_ENV=\"development\" && cd angular && ng serve",
-    "prod": "ng build --prod --output-hashing=none --aot=false --build-optimizer=false && rsync -K -a dist/. ../public",
+    "config": "ts-node ./scripts/set-env.ts",
+    "start": "npm run config -- --environment=dev && ng serve",
+    "build": "npm run config -- --environment=dev && ng build --output-hashing=none --aot=false --build-optimizer=false && rsync -K -a dist/. ../public",
+    "dev": "npm run config -- --environment=dev && NODE_ENV=\"development\" && cd angular && ng serve",
+    "prod": "npm run config -- --environment=prod && ng build --prod --output-hashing=none --aot=false --build-optimizer=false && rsync -K -a dist/. ../public",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -31,6 +32,7 @@
     "angular2-wizard": "^0.4.0",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "fs-extra": "^5.0.0",
     "jquery": "^3.3.1",
     "ng2-modal": "0.0.25",
     "ngx-bootstrap": "^2.0.0-beta.9",
@@ -39,7 +41,7 @@
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "1.5.3",
+    "@angular/cli": "^1.5.3",
     "@angular/compiler-cli": "^5.0.0",
     "@angular/language-service": "^5.0.0",
     "@types/jasmine": "~2.5.53",
@@ -48,6 +50,7 @@
     "@types/node": "~6.0.60",
     "angular2-fontawesome": "^0.9.3",
     "codelyzer": "~3.2.0",
+    "dotenv": "^5.0.1",
     "font-awesome": "^4.7.0",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
@@ -62,6 +65,7 @@
     "slick-carousel": "^1.8.1",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
-    "typescript": "~2.4.2"
+    "typescript": "~2.4.2",
+    "yargs": "^11.0.0"
   }
 }
