--- a/angular2/tsconfig.json
+++ b/angular2/tsconfig.json
@@ -1,7 +1,11 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
-    "paths": { "@angular/*": ["../node_modules/@angular/*"] },
+    "baseUrl": ".",
+    "paths": {
+      "@angular/*": ["../node_modules/@angular/*"]
+
+      },
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
     "declaration": false,
